[package]
name = "short_links"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
http = { version = "1.1.0" }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
http-body-util = { version = "0.1.2" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
regex = { version = "1.10.5" }
lazy_static = { version = "1.5.0" }
once_cell = { version = "1.19.0" }
async-trait = { version = "0.1.81" }

[[bin]]
name = "short_links"
path = "src/main.rs"
